<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <TextView-->
<!--        android:id="@+id/text_dashboard"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="694dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_notifications1"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:text="@string/common"
                android:gravity="bottom"
                android:layout_marginBottom="28dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/text_notifications2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="bottom"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:text="@string/OtoRinoLarinGolog"
                android:layout_marginBottom="0dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/text_notifications3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="0dp"
                android:gravity="bottom"
                android:text="@string/Oculus"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/text_notifications4"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:gravity="bottom"
                android:layout_marginBottom="0dp"
                android:text="@string/Onkologists"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/text_notifications5"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:text="@string/Psycho"
                android:gravity="bottom"
                android:layout_marginBottom="0dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/text_notifications6"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:gravity="bottom"
                android:text="@string/Dentist"
                android:layout_marginBottom="0dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_notifications7"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:gravity="bottom"
                android:layout_marginBottom="65dp"
                android:text="@string/Cardio"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />



        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>